<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvAboutPocket"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="4dp"
    card_view:cardCornerRadius="0dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/wguPrimary"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/owl5" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/wguWhite"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/tvAppVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Version: 2.0.11"
                    android:textColor="@color/wguWhite"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/tvAppCopy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@color/wguAccentLightTrans"
            android:fontFamily="sans-serif-thin"
            android:gravity="center_horizontal"
            android:text="@string/pw_copyright"
            android:textColor="@color/wguBlack"
            android:textSize="18sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/pw_credits_intro"
            android:textColor="@color/wguPrimary"
            android:textSize="14sp" />
    </LinearLayout>
</android.support.v7.widget.CardView>
